--- a/main.html
+++ b/main.html
@@ -5,12 +5,25 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <script type="text/javascript" src="./script.js"></script>
+	<table>
+		<tr>
+			<th>"Roll number" </th>
+			<th>"Name" </th>
+		</tr>
 
+		<tr>
+			<td>1</td>
+			<td>"Student 1"</td>
+		</tr>
+
+		<tr>
+			<td>2</td>
+			<td>"Student 2"</td>
+		</tr>
+	</table>
 </body>
 
 </html>
