--- a/main.html
+++ b/main.html
@@ -10,18 +10,18 @@
     <script type="text/javascript" src="./script.js"></script>
 	<table>
 		<tr>
-			<th>"Roll number" </th>
-			<th>"Name" </th>
+			<th>Roll number</th>
+			<th>Name</th>
 		</tr>
 
 		<tr>
 			<td>1</td>
-			<td>"Student 1"</td>
+			<td>Student 1</td>
 		</tr>
 
 		<tr>
 			<td>2</td>
-			<td>"Student 2"</td>
+			<td>Student 2</td>
 		</tr>
 	</table>
 </body>
