--- a/main.html
+++ b/main.html
@@ -9,20 +9,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js"></script>
 	<table>
-		<tr>
-			<th>Roll number</th>
-			<th>Name</th>
-		</tr>
+		<thead>
+			<tr>
+				<th>Roll number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
 
-		<tr>
-			<td>1</td>
-			<td>Student 1</td>
-		</tr>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Student 1</td>
+			</tr>
 
-		<tr>
-			<td>2</td>
-			<td>Student 2</td>
-		</tr>
+			<tr>
+				<td>2</td>
+				<td>Student 2</td>
+			</tr>
+		</tbody>
 	</table>
 </body>
 
